--- a/EmpInfo/Views/Apply/BeginAuditEPApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditEPApply.cshtml
@@ -267,6 +267,7 @@
                             <option value="" selected disabled>----请在下拉列表中选择（必选）----</option>
                             <option value="设备自身问题">设备自身问题</option>
                             <option value="操作者操作不当">操作者操作不当</option>
+                            <option value="定期耗材更换">定期耗材更换</option>
                             <option value="原因不明确">原因不明确</option>
                         </select>
                     </span>
