--- a/EmpInfo/Views/Apply/CheckITApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckITApply.cshtml
@@ -168,6 +168,16 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="b-div">
                     <span class="b-label">
+                        数量:
+                    </span>
+                    <span class="b-input">
+                        @m.qty
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="b-div">
+                    <span class="b-label">
                         电脑编号:
                     </span>
                     <span class="b-input">
