--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -316,7 +316,15 @@
             </div>
         </div>
     </div>
-    if (auts.IndexOf("ModuelTest") >= 0) {
+    <div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
+            <a href="BasicInfo"><img src="@Url.Content("~/Content/images/basic_info.png")" alt="basic_info"></a>
+            <div class="caption">
+                <h3>基础信息</h3>
+            </div>
+        </div>
+    </div>
+        if (auts.IndexOf("ModuelTest") >= 0) {
         @*<div class="col-xs-6 col-sm-4">
             <div class="thumbnail">
                 <a href="@Url.Content("~/Home/EditPublicFundInfo")"><img src="@Url.Content("~/Content/images/public_fund.png")" alt="public_fund"></a>
