--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -78,7 +78,7 @@
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=JQ")">
                     <img src="@Url.Content("~/Content/images/quit.png")" alt="员工辞职/自离申请" class="center-block" />
-                    <p class="text-center">员工辞职/自离</p>
+                    <p class="text-center">员工辞职自离</p>
                 </a>
             </div>
             @*<div class="col-xs-4 col-sm-3 col-md-2">
@@ -179,6 +179,13 @@
                 <a href="@Url.Content("~/Others/DormAndEmps")">
                     <img src="@Url.Content("~/Content/images/dorm_users.png")" class="center-block" />
                     <p class="text-center">宿舍员工查询</p>
+                </a>
+            </div>
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=DE")">
+                    <img src="@Url.Content("~/Content/images/de.png")" class="center-block" />
+                    <p class="text-center">后勤工程支出</p>
                 </a>
             </div>
 
